appId: ${APP_ID}
name: Toasts and Dialogs
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-13

---
- evalScript: ${output.user = output.utils.createUser()}
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# Show alerts as Toasts
- tapOn: 'Menu'
- tapOn: 'Accessibility & appearance'
- tapOn: '.*Show alerts as.*'
- assertVisible: 'Toasts. Dismissed automatically. Checked'
- assertVisible: 'Dialogs. Require manual dismissal. Unchecked'
- tapOn:
    id: 'action-sheet-handle'
- waitForAnimationToEnd:
    timeout: 5000
- tapOn: 'Menu'
- tapOn: 'Edit status'
- tapOn:
    id: 'status-view-offline'
- tapOn: 'Save'
- extendedWaitUntil:
    visible:
      text: 'Status saved successfully!'
    timeout: 60000

# Show alerts as Dialogs
- tapOn: 'Accessibility & appearance'
- tapOn: '.*Show alerts as.*'
- assertVisible: 'Toasts. Dismissed automatically. Checked'
- tapOn: 'Dialogs. Require manual dismissal. Unchecked'
- tapOn: 'Menu'
- tapOn: 'Edit status'
- tapOn:
    id: 'status-view-online'
- tapOn: 'Save'
- extendedWaitUntil:
    visible:
      text: 'Status saved successfully!'
    timeout: 60000
- assertVisible: 'OK'
- tapOn: 'OK'
