appId: ${APP_ID}
name: Accessibility and Appearance
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-5
  - android-only

---
- evalScript: ${output.user = output.utils.createUser()}
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- runFlow:
    file: './utils/go-to-accessibility-appearance.yaml'

# should have accessibility view list
- extendedWaitUntil:
    visible:
      id: 'accessibility-view-list'
    timeout: 60000

# should have menu button
- runFlow:
    file: '../../helpers/wait-header-item.yaml'
    env:
      ANDROID_ID: 'accessibility-view-drawer'
      IOS_LABEL: 'Menu'

# should have theme button
- extendedWaitUntil:
    visible:
      id: 'accessibility-theme-button'
    timeout: 60000

# should have display button
- extendedWaitUntil:
    visible:
      id: 'accessibility-display-button'
    timeout: 60000

# should have rooms with hashtag symbol switch
- extendedWaitUntil:
    visible:
      id: 'accessibility-rooms-with-hashtag-symbol-switch'
    timeout: 60000

# should have mentions with at symbol switch
- extendedWaitUntil:
    visible:
      id: 'accessibility-mentions-with-at-symbol-switch'
    timeout: 60000

# should have autoplay gifs switch
- extendedWaitUntil:
    visible:
      id: 'accessibility-autoplay-gifs-switch'
    timeout: 60000

# should enable mentions with @ symbol
- extendedWaitUntil:
    visible:
      id: 'accessibility-mentions-with-at-symbol-switch'
    timeout: 60000
- tapOn:
    id: 'accessibility-mentions-with-at-symbol-switch'

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'accessibility-view-drawer'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-chats'
    timeout: 60000
- tapOn:
    id: 'sidebar-chats'
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: 'maestro-accessibility-test'

- extendedWaitUntil:
    visible:
      text: '@all - all mention'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '@rocket.cat - user mention'
    timeout: 60000

# should disable mentions with @ symbol
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: './utils/go-to-accessibility-appearance.yaml'

- extendedWaitUntil:
    visible:
      id: 'accessibility-mentions-with-at-symbol-switch'
    timeout: 60000
- tapOn:
    id: 'accessibility-mentions-with-at-symbol-switch'

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'accessibility-view-drawer'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-chats'
    timeout: 60000
- tapOn:
    id: 'sidebar-chats'
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: 'maestro-accessibility-test'

- extendedWaitUntil:
    visible:
      text: 'all - all mention'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'rocket.cat - user mention'
    timeout: 60000

# should enable rooms with # symbol
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: './utils/go-to-accessibility-appearance.yaml'

- extendedWaitUntil:
    visible:
      id: 'accessibility-rooms-with-hashtag-symbol-switch'
    timeout: 60000
- tapOn:
    id: 'accessibility-rooms-with-hashtag-symbol-switch'

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'accessibility-view-drawer'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-chats'
    timeout: 60000
- tapOn:
    id: 'sidebar-chats'
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: 'maestro-accessibility-test'

- extendedWaitUntil:
    visible:
      text: '#general - channel mention'
    timeout: 60000

# should disable mentions with # symbol
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: './utils/go-to-accessibility-appearance.yaml'

- extendedWaitUntil:
    visible:
      id: 'accessibility-rooms-with-hashtag-symbol-switch'
    timeout: 60000
- tapOn:
    id: 'accessibility-rooms-with-hashtag-symbol-switch'

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'accessibility-view-drawer'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-chats'
    timeout: 60000
- tapOn:
    id: 'sidebar-chats'
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: 'maestro-accessibility-test'
- extendedWaitUntil:
    visible:
      text: 'general - channel mention'
    timeout: 60000
