appId: ${APP_ID}
name: Broadcast
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-5

---
- evalScript: ${output.room = 'broadcast' + output.random()}
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# should create broadcast room
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- inputText: ${output.otherUser.username}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-${output.otherUser.username}'
- extendedWaitUntil:
    visible:
      id: 'selected-user-${output.otherUser.username}'
    timeout: 60000
- runFlow: '../../helpers/close-search.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      id: 'create-channel-view'
    timeout: 60000
- assertVisible:
    id: 'create-channel-name'
- tapOn:
    id: 'create-channel-name'
- inputText: ${output.room}
- runFlow: '../../helpers/hide-keyboard.yaml'
- assertVisible:
    id: 'create-channel-broadcast'
- tapOn:
    id: 'create-channel-broadcast'
- extendedWaitUntil:
    visible:
      id: 'create-channel-submit'
    timeout: 60000
- tapOn:
    id: 'create-channel-submit'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room}
- runFlow: '../../helpers/open-room-actions.yaml'
- tapOn:
    id: 'room-actions-info'
- extendedWaitUntil:
    visible:
      id: 'room-info-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'room-info-view-broadcast'
    timeout: 60000
- runFlow: ../../helpers/go-back.yaml
- runFlow: ../../helpers/go-back.yaml
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'message'

# should login as user without write message authorization and enter room
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.otherUser.username}
      PASSWORD: ${output.otherUser.password}
      CLEAR_STATE: true
- runFlow:
    file: '../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: ${output.room}
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room}

# should not have message composer
- assertNotVisible:
    id: 'message-composer'

# should be read only
- assertVisible:
    label: 'This room is read only'

# should have the message created earlier
- assertVisible:
    id: 'message-content-message'

# should tap on reply button and navigate to direct room
- assertVisible:
    id: 'message-broadcast-reply'
- tapOn:
    id: 'message-broadcast-reply'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.user.username}

# should reply broadcasted message
- assertVisible:
    id: 'message-composer-input'
- tapOn:
    id: 'message-composer-input'
- inputText: 'broadcastreply'
- tapOn:
    id: 'message-composer-send'
- extendedWaitUntil:
    visible:
      text: '.*broadcastreply.*'
    timeout: 60000
- longPressOn:
    text: '.*broadcastreply.*'
    index: 0
- extendedWaitUntil:
    visible:
      text: 'Jump to message'
    timeout: 60000
- tapOn:
    text: 'Jump to message'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room}
